--- a/Html/Dificulty-LV/Dificulty-1.html
+++ b/Html/Dificulty-LV/Dificulty-1.html
@@ -57,13 +57,13 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="../Biomes/Biome-1.html"><img src="../../Images/Biomes/Dificulty-1/SafeShallows.png" title="Safe Shallows" alt="SafeShallows.png"></a>
+                        <a href="../Biomes/Biome-1.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-1/SafeShallows.png" title="Safe Shallows" alt="SafeShallows.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-2.html"><img src="../../Images/Biomes/Dificulty-1/KelpForestTrue.png" title="Kelp Forest" alt="KelpForestTrue.png"></a>
+                        <a href="../Biomes/Biome-2.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-1/KelpForestTrue.png" title="Kelp Forest" alt="KelpForestTrue.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-3.html"><img src="../../Images/Biomes/Dificulty-1/Sparse_Reef_Biome.png" title="Sparse Reef" alt="Sparse_Reef_Biome.png"></a>
+                        <a href="../Biomes/Biome-3.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-1/Sparse_Reef_Biome.png" title="Sparse Reef" alt="Sparse_Reef_Biome.png"></a>
                     </td>
                 </tr>
                 <tr>
