--- a/Html/Dificulty-LV/Dificulty-2.html
+++ b/Html/Dificulty-LV/Dificulty-2.html
@@ -59,19 +59,19 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-2/Grassy_Plateaus_Biome.png" title="Grassy Plateaus" alt="Grassy_Plateaus_Biome.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-2/Grassy_Plateaus_Biome.png" title="Grassy Plateaus" alt="Grassy_Plateaus_Biome.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-2/MushroomEastTrue.png" title="Mushroom Forest" alt="MushroomEastTrue.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-2/MushroomEastTrue.png" title="Mushroom Forest" alt="MushroomEastTrue.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-2/2016-02-07_00009.png" title="Jellyshroom Caves" alt="2016-02-07_00009.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-2/2016-02-07_00009.png" title="Jellyshroom Caves" alt="2016-02-07_00009.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-2/UnderIslandsInfobox.png" title="Underwater Islands" alt="UnderIslandsInfobox.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-2/UnderIslandsInfobox.png" title="Underwater Islands" alt="UnderIslandsInfobox.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-2/FloatingIsland1.png" title="Floater Islands" alt="FloatingIsland1.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-2/FloatingIsland1.png" title="Floater Islands" alt="FloatingIsland1.png"></a>
                     </td>
                 </tr>
                 <tr>
