--- a/Html/Dificulty-LV/Dificulty-3.html
+++ b/Html/Dificulty-LV/Dificulty-3.html
@@ -58,16 +58,16 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-3/BulbZoneTrue.png" title="Bulb Zone" alt="BulbZoneTrue.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-3/BulbZoneTrue.png" title="Bulb Zone" alt="BulbZoneTrue.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-3/BloodKelpZoneNorthTrue.png" title="Blood Kelp Zone" alt="BloodKelpZoneNorthTrue.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-3/BloodKelpZoneNorthTrue.png" title="Blood Kelp Zone" alt="BloodKelpZoneNorthTrue.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-3/STPTrue.png" title="Sea treader's Path" alt="STPTrue.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-3/STPTrue.png" title="Sea treader's Path" alt="STPTrue.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-3/Crag_Field_Biome.png" title="Crag Field" alt="Crag_Field_Biome.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-3/Crag_Field_Biome.png" title="Crag Field" alt="Crag_Field_Biome.png"></a>
                     </td>
                 </tr>
                 <tr>
