--- a/Html/Dificulty-LV/Dificulty-4.html
+++ b/Html/Dificulty-LV/Dificulty-4.html
@@ -59,19 +59,19 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-4/Grand_Reef_Biome.png" title="Grand Reef" alt="Grand_Reef_Biome.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-4/Grand_Reef_Biome.png" title="Grand Reef" alt="Grand_Reef_Biome.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-4/Mountains_Biome.png" title="Mountains" alt="Mountains_Biome.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-4/Mountains_Biome.png" title="Mountains" alt="Mountains_Biome.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-4/Lava_9.png" title="Inactive Lava Zone" alt="Lava_9.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-4/Lava_9.png" title="Inactive Lava Zone" alt="Lava_9.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-4/Lost_RIver_Infobox_PIc.png" title="Lost River" alt="Lost_RIver_Infobox_PIc.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-4/Lost_RIver_Infobox_PIc.png" title="Lost River" alt="Lost_RIver_Infobox_PIc.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-4/ALZ1.png" title="Active Lava Zone/Lakes" alt="ALZ1.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-4/ALZ1.png" title="Active Lava Zone/Lakes" alt="ALZ1.png"></a>
                     </td>
                 </tr>
                 <tr>
