--- a/Html/Dificulty-LV/Dificulty-5.html
+++ b/Html/Dificulty-LV/Dificulty-5.html
@@ -56,10 +56,10 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-5/Dunes_Biome.png" title="Dunes" alt="Dunes_Biome.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-5/Dunes_Biome.png" title="Dunes" alt="Dunes_Biome.png"></a>
                     </td>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-5/CrashZoneTrue.png" title="Crash Zone" alt="CrashZoneTrue.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-5/CrashZoneTrue.png" title="Crash Zone" alt="CrashZoneTrue.png"></a>
                     </td>
                 </tr>
                 <tr>
