--- a/Html/Dificulty-LV/Dificulty-Nightmare.html
+++ b/Html/Dificulty-LV/Dificulty-Nightmare.html
@@ -55,7 +55,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-6/Ecological_Dead_Zone.png" title="Void / Ecological Dead Zone / Crater Edge" alt="Ecological_Dead_Zone.png"></a>
+                        <a href="../Biomes/Biome-ect.html"><img class="Images-Biomes" src="../../Images/Biomes/Dificulty-6/Ecological_Dead_Zone.png" title="Void / Ecological Dead Zone / Crater Edge" alt="Ecological_Dead_Zone.png"></a>
                     </td>
                 </tr>
                 <tr>
