--- a/Html/Mobs-Type/Mobs-Carnivore.html
+++ b/Html/Mobs-Type/Mobs-Carnivore.html
@@ -48,7 +48,297 @@
         <div class="Mobs-Carnivores-Text">
             Carnivores
         </div>
-            
+        <div class="Dispo-Mobs">
+            <div>
+                <table>
+                    <tr>
+                        Name : Ampeel
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Ampeel_Fauna.png" title="Ampeel" alt="Ampeel_Fauna.png">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : Crabsquid
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Crabsquid_Fauna.png" title="Crabsquid" alt="Crabsquid_Fauna.png">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table>
+                    <tr>
+                        Name : 
+                    </tr>
+                    <tr>
+                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    </tr>
+                    <tr>
+                        <ul>
+                            <li>Locations :
+                                - 
+                            </li>
+                        </ul>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
 </body>
 </html>
