--- a/Html/Mobs-Type/Parasite.html
+++ b/Html/Mobs-Type/Parasite.html
@@ -45,6 +45,297 @@
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
+    <div class="Dispo-Mobs">
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : 
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations :
+                            - 
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+    </div>
     </div>
 </body>
 </html>
